--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "demo": "https://angularexpo.com",
   "version": "1.0.0",
   "engines": {
-    "ghost": ">=0.9.0 <1.0.0"
+    "ghost": "3.0.0"
   },
   "dependencies": {
     "del": "^2.2.2",
@@ -17,8 +17,8 @@
     "gulp-sass": "^3.1.0",
     "gulp-uglify": "^2.0.1",
     "gulp-uncss": "^1.0.6",
-    "node-sass": "3.9.3",
-    "nodemon": "1.10.2"
+    "node-sass": "^3.9.3",
+    "nodemon": "^1.10.2"
   },
   "scripts": {
     "build": "node-sass --include-path --source-map assets/css assets/scss/main.scss assets/css/main.css",
