--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "bootstrap": "4.3.1",
     "del": "5.1.0",
     "fs": "0.0.1-security",
+    "ghost-search": "^1.1.0",
     "gulp": "4.0.2",
     "gulp-concat": "2.6.1",
     "gulp-html-replace": "1.6.2",
